my second and third blog

--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
 <body>
     <div>
      <h3>
-        my first website
+        my second blog
      </h3>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam possimus magni iste. Reiciendis tenetur nulla error harum nihil voluptatem, deserunt itaque, cum assumenda corrupti cupiditate atque maiores consequatur quos nostrum!</p>
 
     </div>
+    <div>
+        <h3>
+           my third blog
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam possimus magni iste. Reiciendis tenetur nulla error harum nihil voluptatem, deserunt itaque, cum assumenda corrupti cupiditate atque maiores consequatur quos nostrum!</p>
+   
+       </div>
+
+       <div>
+        <h3>
+           my first website
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam possimus magni iste. Reiciendis tenetur nulla error harum nihil voluptatem, deserunt itaque, cum assumenda corrupti cupiditate atque maiores consequatur quos nostrum!</p>
+   
+       </div>
+   
 </body>
 </html>
