--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam possimus magni iste. Reiciendis tenetur nulla error harum nihil voluptatem, deserunt itaque, cum assumenda corrupti cupiditate atque maiores consequatur quos nostrum!</p>
    
        </div>
+       <div>
+        <h3>How to add incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"some meaningful comment"</li>
+            <li>git push</li>
+        </ul>
+       </div>
    
 </body>
 </html>
