--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <li>git push</li>
         </ul>
        </div>
-   
+   <div>
+    <h3>Luffy</h3>
+    <img src="/images/Luffy.jpeg" alt="">
+   </div>
 </body>
 </html>
